# ppgso-nature-demo

./: .gitignore  CMakeLists.txt  README.md
shader/: diffuse_frag.glsl  diffuse_vert.glsl
src/: camera.cpp  camera.h  main.cpp  object.cpp  object.h  player.cpp  player.h  scene.cpp  scene.h  staticObjects.cpp  staticObjects.h
